# trp-1.0.0-test

./: .gitignore  README.md  calibration.json  future.md  main.py  pyproject.toml  run.bat  setup.sh  test_grsim_send.py  test_vision_recv.py  tuning.json  ui_main.py
Diamond/: DiamondPlanner Documentation.txt  diamond_fixed_positions.py  diamond_planner_final.py  diamond_random_positions.py
behaviour_tree/: __init__.py  cmd_mgr.py  common_trees.py  goalie_tree.py  halt_sequence.py  main_tree.py  move_away.py  run_bt_process.py  stop_sequence.py  striker_tree.py  test_tree.py  velocity.py
docs/: DifferenceFromLastVersion.md  HowToConnectToGrSim.md  HowToWriteCode.md  Multiprocessing.md  SSL-NetworkPorts.md
scripts/: README.md  installGRSIM.sh  installGameController.sh  installSSLVision.sh
src/TeamControl/: __init__.py
src/TeamControl/Examples/: go_to_ball_and_shoot.py
src/TeamControl/Formation/: README.md  demo.py  formation.py  formation_manager.py  formations.txt  relative_position.py  strategic_position.py
src/TeamControl/cache/: __init__.py  ball_cache.py  base.py  game_state_cache.py  onboard_ball_cache.py  robot_cache.py  team_cache.py  tick_cache.py
src/TeamControl/dispatcher/: dispatch.py  generate_packet.py
src/TeamControl/network/: baseUDP.py  commands_new.py  grSimPacketFactory.py  receiver.py  robot_command.py  sender.py  ssl_sockets.py
src/TeamControl/robot/: coop.py  (+14 more)
tests/: README.md  gc_message_test.py  logger_test.py  vision_message_test.py
tests/dispatcher_test/: m_process_test.py  message_recv_test.py  robot_command_creation_test.py
(+91 files in other folders)
